<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/signInEmailLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="@dimen/buttonSideMargin"
            android:layout_marginStart="@dimen/buttonSideMargin"
            android:layout_marginTop="8dp"
            android:background="@drawable/sign_in_email_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/signInEmailImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_email_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in_email"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/signInEmailImage"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInGoogleLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:clickable="true"
            android:focusable="true"
            app:buttonSize="wide"
            app:colorScheme="light">

        </com.google.android.gms.common.SignInButton>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/signInFacebookLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="@dimen/buttonSideMargin"
            android:layout_marginStart="@dimen/buttonSideMargin"
            android:layout_marginTop="8dp"
            android:background="@drawable/sign_in_facebook_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/signInFacebookImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_email_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in_facebook"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/signInFacebookImage"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/signInTwitterLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="@dimen/buttonSideMargin"
            android:layout_marginStart="@dimen/buttonSideMargin"
            android:layout_marginTop="8dp"
            android:background="@drawable/sign_in_twitter_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/signinTwitterImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                app:srcCompat="@drawable/ic_email_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in_twitter"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/signinTwitterImage"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>